# Gsynth-Python

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/effect/: index.html
api/gsynth/: index.html
api/plot/: index.html
api/result/: index.html
changelog/: index.html
docs/: changelog.md  index.md  installation.md
docs/api/: effect.md  gsynth.md  plot.md  result.md
docs/tutorials/: election.md  quickstart.md  staggered.md  turnout.md
docs/user-guide/: basic-estimation.md  covariates.md  cross-validation.md  data-format.md  effect-summary.md  estimators.md  fixed-effects.md  inference.md  staggered-adoption.md  visualization.md
installation/: index.html
search/: search_index.json
src/gsynth/: __init__.py  _core.py  _cv.py  _data.py  _effect.py  _estimators.py  _inference.py  _plots.py  _result.py
src/gsynth/data/: __init__.py  turnout.csv
tests/: conftest.py  test_core.py  test_effect.py  test_estimators.py  test_plots.py
tutorials/election/: index.html
tutorials/quickstart/: index.html
tutorials/staggered/: index.html
tutorials/turnout/: index.html
user-guide/basic-estimation/: index.html
user-guide/covariates/: index.html
user-guide/cross-validation/: index.html
user-guide/data-format/: index.html
user-guide/effect-summary/: index.html
user-guide/estimators/: index.html
user-guide/fixed-effects/: index.html
user-guide/inference/: index.html
user-guide/staggered-adoption/: index.html
user-guide/visualization/: index.html
