[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsynth"
version = "0.2.0"
description = "Generalized Synthetic Control Method — pure-NumPy Python port of the R gsynth package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "dwrich27", email = "dwrich27@users.noreply.github.com" }]
keywords = ["causal-inference", "synthetic-control", "panel-data", "econometrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://dwrich27.github.io/Gsynth-Python/"
Repository = "https://github.com/dwrich27/Gsynth-Python"
"Bug Tracker" = "https://github.com/dwrich27/Gsynth-Python/issues"
Changelog = "https://dwrich27.github.io/Gsynth-Python/changelog/"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gsynth.data" = ["*.csv"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
